changing hero img height to 100%

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
       <div id="Home" class="hero-image">
         <div class="hero-text">
           <br>
-          <h1 style="font-size:50px">Your Business</h1>
-          <p>We work hard for you</p>
+          <h1 style="font-size:90px">Your Business</h1>
+          <h2>We work hard for you</h2>
+          <div class="divider1"></div>
+          
           <a class="btn btn-primary btn-lg" href="tel:18012595614" role="button">Call Us</a>
           <a class="btn btn-success btn-lg" href="https://api.whatsapp.com/send?phone=18012595614&amp;text=Hi there! I have a question :)" role="button" target="_blank">Text Us</a>
         </div>
@@ -320,7 +322,7 @@
                
               </div>
               <div class="col">
-                <p id="Footertext2">Created by <b>ProntoWeb</b></p>
+                <p id="Footertext2">Created by <b>Company</b></p>
               </div>
             </div>
           </div>
