changing hero img height to 100%

--- a/index.html
+++ b/index.html
@@ -192,9 +192,8 @@
      <!--Section 6-->
       <section class="testimonial text-center">
         <div class="container">
-
             <div class="heading white-heading">
-                TESTIMONIAL
+                <h1>TESTIMONIAL</h1>
             </div>
             <div id="testimonial4" class="carousel slide testimonial4_indicators testimonial4_control_button thumb_scroll_x swipe_x" data-ride="carousel" data-pause="hover" data-interval="5000" data-duration="2000">
              
@@ -203,20 +202,20 @@
                         <div class="testimonial4_slide">
                             <img src="Img/Face1.jpg" class="img-circle img-responsive" />
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                            <h4>Client 1</h4>
+                            <h4>Client Testimonial #1</h4>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="testimonial4_slide">
                             <img src="Img/Face2.jpg" class="img-circle img-responsive" /><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                            <h4>Client 2</h4>
+                            <h4>Client Testimonial #2</h4>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="testimonial4_slide">
                             <img src="Img/Face3.jpg" class="img-circle img-responsive" />
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                            <h4>Client 3</h4>
+                            <h4>Client Testimonial #3</h4>
                         </div>
                     </div>
                 </div>
