changing footer notes

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                
               </div>
               <div class="col">
-                <p id="Footertext2">Created by Web<b><i>4</i></b>Less</p>
+                <p id="Footertext2">Created by Velox Web Development</p>
               </div>
             </div>
           </div>
